--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,18 +1,22 @@
 FROM php:8.2-apache
 
-# Install extensions
+# Install extensions and Apache modules
 RUN apt-get update && apt-get install -y \
     unzip \
     zip \
     curl \
     nano \
     libpng-dev libonig-dev libxml2-dev zip unzip \
+    apache2-utils \
     && docker-php-ext-install pdo_mysql mbstring exif pcntl bcmath gd
 
 # Install Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
+# Enable Apache modules
 RUN a2enmod rewrite headers
+
+RUN pecl install xdebug
 
 # Copy the application files
 COPY ./src /srv/src
