--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - ./server/etc/apache2/sites-enabled/default.conf:/etc/apache2/sites-enabled/000-default.conf
       - ./server/php/conf.d/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
       - ./xdebug-artifacts:/tmp/xdebug-artifacts
+      - ./xdebug-artifacts/xdebug.log:/var/log/xdebug.log
     ports:
       - "3001:80"
     depends_on:
