--- a/src/.env.example
+++ b/src/.env.example
@@ -70,3 +70,5 @@ JWT_TTL=60
 
 CLOUDINARY_URL=
 
+AZURE_TTS_KEY=your_azure_tts_key_here
+AZURE_TTS_ENDPOINT=https://koreacentral.tts.speech.microsoft.com/cognitiveservices/v1
