--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   server:
@@ -18,7 +18,6 @@ services:
       - db
     networks:
       - app-network
-    
 
   db:
     image: mysql:8
@@ -33,6 +32,18 @@ services:
       - db-data:/var/lib/mysql
     ports:
       - "3305:3306"
+    networks:
+      - app-network
+
+  recommendation:
+    container_name: toeic_recommendation
+    build:
+      context: ./recommendation
+      dockerfile: Dockerfile
+    volumes:
+      - ./recommendation:/app
+    ports:
+      - "8000:8000"
     networks:
       - app-network
 
