Create api chat get assistance about toeic question

--- a/src/.env.example
+++ b/src/.env.example
@@ -72,3 +72,5 @@ CLOUDINARY_URL=
 
 AZURE_TTS_KEY=your_azure_tts_key_here
 AZURE_TTS_ENDPOINT=https://koreacentral.tts.speech.microsoft.com/cognitiveservices/v1
+
+GEMINI_API_KEY=
