--- a/src/composer.json
+++ b/src/composer.json
@@ -8,6 +8,7 @@
     "require": {
         "php": "^8.2",
         "cloudinary-labs/cloudinary-laravel": "^3.0",
+        "google-gemini-php/laravel": "^2.0",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
         "php-open-source-saver/jwt-auth": "^2.8"
