--- a/server/php/conf.d/xdebug.ini
+++ b/server/php/conf.d/xdebug.ini
@@ -1,15 +1,18 @@
 [xdebug]
 zend_extension=xdebug
-# xdebug.mode=develop,debug,trace
+; xdebug.mode=develop,debug,trace
 xdebug.mode=develop,debug
-; xdebug.start_with_request=yes
-xdebug.start_with_request=trigger
+; xdebug.mode=debug
+
+xdebug.start_with_request=yes
+; xdebug.start_with_request=trigger
 
 xdebug.client_host=host.docker.internal
-xdebug.client_port=9000
+xdebug.client_port=9003
 xdebug.discover_client_host=0
 xdebug.log=/var/log/xdebug.log
+; xdebug.connect_timeout_ms=2000
 
-xdebug.output_dir=/tmp/xdebug-artifacts
-xdebug.trace_output_name=trace_%t_%H_%R
-xdebug.use_compression=false
+; xdebug.output_dir=/tmp/xdebug-artifacts
+; xdebug.trace_output_name=trace_%t_%H_%R
+; xdebug.use_compression=false
