--- a/server/etc/apache2/sites-enabled/default.conf
+++ b/server/etc/apache2/sites-enabled/default.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-    ServerAdmin webmaster@localhost
+    ServerName localhost
 
     DirectoryIndex index.php
     DocumentRoot /srv/src/public
