--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,7 +66,7 @@ services:
       - "80:80"
     volumes:
       - ./proxy/nginx.conf:/etc/nginx/nginx.conf
-      - ./proxy/ssl:/etc/nginx/ssl
+      - ./proxy/ssl:/etc/letsencrypt/live/toeicbooster.io.vn
     depends_on:
       - toeic_server
       - toeic_recommendation
