--- a/proxy/nginx.conf
+++ b/proxy/nginx.conf
@@ -46,7 +46,7 @@ http {
         # ssl_protocols TLSv1.2 TLSv1.3;
         # ssl_prefer_server_ciphers on;
 
-        location / {
+        location /api/ {
             proxy_pass http://toeic_server:80;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
@@ -60,6 +60,10 @@ http {
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+        }
+
+        location / {
+            proxy_pass http://host.docker.internal:3000;
         }
     }
 }
