--- a/proxy/Dockerfile
+++ b/proxy/Dockerfile
@@ -2,8 +2,8 @@ FROM nginx:latest
 
 # Install Certbot for SSL certificate generation
 RUN apt update && \
-    apt install -y certbot python3-certbot-nginx
+    apt install -y certbot
 
 # Create directories
 RUN mkdir -p /var/www/certbot
-RUN mkdir -p /etc/letsencrypt/live/toeicbooster.io.vn
+RUN mkdir -p /etc/letsencrypt/live
